# trnorm

./: .gitignore  README.md  README_BASIC_NORMALIZER.md  README_SIMPLIFIED_NORMALIZER.md  README_ordinals.md  README_text_utils.md  demo_iken.py  demo_ordinals.py  demo_text_utils.py  ile.py  ise.py  istisnalar.py  normalizer.py  num_to_text.py  old-normalizer.py  ordinals.py  pyproject.toml  test_apostrophe_fix.py  test_apostrophe_issue.py  test_comma_fix.py  test_comma_issue.py  test_decimal_vs_time.py  test_example.py  test_normalizer.py  test_ordinals.py  test_text_utils.py  test_thousands_separator.py  test_time_zero_minutes.py  test_user_example.py  test_user_example_comma.py  test_wer_analysis.py  text_utils.py
demos/: roman_demo.py
docs/: README_metrics.md  README_num_to_text.md  README_ordinals.md  README_symbols.md  normalizer.md  transformer.md
examples/: alphanumeric_demo.py  alphanumeric_test_cases.py  apostrophe_handling_example.py  basic_normalizer_example.py  benchmarking_example.py  comma_numbers_example.py  context_aware_demo.py  default_pipeline_test.py  demo_iken.py  demo_legacy_normalizer.py  demo_metrics.py  demo_num_to_text.py  demo_ordinals.py  demo_roman_numerals.py  demo_symbols.py  demo_text_utils.py  dimension_example.py  legacy_normalizer_demo.py  normalizer_example.py  pipeline_test.py  process_asr_logs.py  punctuation_suffix_test.py  punctuation_test.py  roman_ordinal_test.py  roman_ordinals_demo.py  roman_ordinals_test.py  scratchpad.ipynb  separator_test.py  simple_normalizer_example.py  simulate_calculations.py  suffix_example.py  (+5 more)
(+38 files in other folders)
