[project]
name = "trnorm"
version = "0.1.0"
description = "Turkish text normalization tools for natural language processing"
readme = "README.md"
authors = [
    { name = "Yunus Seyhan Dede", email = "ysdede@🦆.com" }
]
requires-python = ">=3.8"
dependencies = []
license = "Apache-2.0"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3.4",
]

[tool.ruff.lint.isort]
lines-between-types = 1

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "B", "Q", "N", "I"]
